2006-11-05  Paolo Mantegazza <mantegazza@aero.polimi.it>

	* /include/rtai_sched.h: extended error codes to include netrpc timeout.

2006-11-06  Pierangelo Masarati <masarati@aero.polimi.it>

	* configure.in: allow to configure RTAI_RTDM_EDGE_SHIRQ,
	  RTAI_RTDM_LEVEL_SHIRQ and RTAI_DEBUG_RTDM;
	  refresh of all build files

2006-11-05  Paolo Mantegazza <mantegazza@aero.polimi.it>

	* /addons/rtdm/* and /addons/drivers/16550.c: aligned to the latest.
	* /base/ipc/shm/shm.c: use TSKEXT1, properly restoring it after being 
	  used, in place of TSKEXT3 for mapping to user space.
	* /base/include/rtai_hal_names.h: added #error check for TSKEXTs, to
	  avoid memory leaks in case hal patches change the related sizing;
	  reworked hal_schedule_back_root stuff for proper use of "prev", as
	  set from within "context_switch".

2006-11-04  Paolo Mantegazza <mantegazza@aero.polimi.it>

	* /base/include/rtai_hal_names.h: check task extensions (throug macro
	   TSKEXT0) to avoid memory leaks in case of hal patches changing of 
	   what set in Linux task struct.

2006-11-02  Paolo Mantegazza <mantegazza@aero.polimi.it>

	* /base/arch/i386/hal/hal.immed: use existing hal-linux support for 
	  changing Linux real time scheduling policy and rt_priority for 
	  2.6.xx.

2006-11-01  Paolo Mantegazza <mantegazza@aero.polimi.it>

	* /base/include/rtai_hal_names.h,
	* /base/include/asm-i386/rtai_hal.h: adapted to the new definition of 
	  hal domains through Linux per_cpu stuff.

2006-10-27  Roberto Bucher <roberto.bucher@supsi.ch>

	* /rtai-lab/scilab/devices/*.c: function getstr changed to
	par_getstr (conflict with a Scilab function). Thanks to
	Simone Mannori.

2006-10-26  Roberto Bucher <roberto.bucher@supsi.ch>

	* /rtai-lab/scilab/macros/RTAI/rtai4_comedi_datain.sci: Corrected
	bug by passing block parameters. Thanks to Simone Mannori.

2006-10-20  Roberto Bucher <roberto.bucher@supsi.ch>

	* /rtai-lab/matlab/rtmain.c: Added a hiddean feature to measure the