@@ -523,7 +523,7 @@ fi
 
 AC_MSG_CHECKING(whether LXRT wraps service calls through Linux syscalls)
 AC_ARG_ENABLE(lxrt-use-linux-syscall,
-	[ --enable-lxrt-use-linux-syscall		Wrap LXRT service calls throug Linux syscall mechanism],
+	[ --enable-lxrt-use-linux-syscall	Wrap LXRT service calls throug Linux syscall mechanism],
 	[case "$enableval" in
 	y | yes) CONFIG_RTAI_LXRT_USE_LINUX_SYSCALL=y ;;
 	*) unset CONFIG_RTAI_LXRT_USE_LINUX_SYSCALL ;;
@@ -662,7 +662,7 @@ AC_MSG_RESULT(${CONFIG_RTAI_SCHED_ISR_LOCK:-no})
 
 AC_MSG_CHECKING(for RTC freq)
 AC_ARG_ENABLE(rtc-freq,
-	[ --enable-rtc-freq Enable RTC freq],
+	[ --enable-rtc-freq	Enable RTC freq],
 	[case "$enableval" in
  changequote(,)dnl add a test for 0 or power of 2, <2-8192>
 	[0-9]*) CONFIG_RTAI_RTC_FREQ=$enableval ;;
@@ -753,7 +753,7 @@ AC_MSG_RESULT($CONFIG_RTAI_RTDM_FD_MAX)
 
 AC_MSG_CHECKING(for shared edge triggered interrupts in RTDM)
 AC_ARG_ENABLE(rtdm-edge-shirq,
-	      [ --enable-rtdm-edge-shirq        	Enable shared edge triggered interrupts in RTDM],
+	      [ --enable-rtdm-edge-shirq	Enable shared edge triggered interrupts in RTDM],
 	[case "$enableval" in
 	y | yes) CONFIG_RTAI_RTDM_EDGE_SHIRQ=y ;;
 	*) unset CONFIG_RTAI_RTDM_EDGE_SHIRQ ;;
@@ -762,7 +762,7 @@ AC_MSG_RESULT(${CONFIG_RTAI_RTDM_EDGE_SHIRQ:-no})
 
 AC_MSG_CHECKING(for shared level triggered interrupts in RTDM)
 AC_ARG_ENABLE(rtdm-level-shirq,
-	      [ --enable-rtdm-level-shirq        	Enable shared level triggered interrupts in RTDM],
+	      [ --enable-rtdm-level-shirq	Enable shared level triggered interrupts in RTDM],
 	[case "$enableval" in
 	y | yes) CONFIG_RTAI_RTDM_LEVEL_SHIRQ=y ;;
 	*) unset CONFIG_RTAI_RTDM_LEVEL_SHIRQ ;;
@@ -771,7 +771,7 @@ AC_MSG_RESULT(${CONFIG_RTAI_RTDM_LEVEL_SHIRQ:-no})
 
 AC_MSG_CHECKING(for RTDM debug)
 AC_ARG_ENABLE(debug-rtdm,
-	      [ --enable-debug-rtdm			Enable RTDM debug],
+	      [ --enable-debug-rtdm		Enable RTDM debug],
 	[case "$enableval" in
 	y | yes) CONFIG_RTAI_DEBUG_RTDM=y ;;
 	*) unset CONFIG_RTAI_DEBUG_RTDM ;;
@@ -942,6 +942,49 @@ AC_ARG_ENABLE(cpus,
 	*) AC_MSG_ERROR([Bad argument to option: --enable-cpus=<number-of-CPUs>]) ;;
 	esac])
 AC_MSG_RESULT(${CONFIG_RTAI_CPUS:-1})
+
+dnl
+dnl Check for TSC options
+dnl
+
+AC_MSG_CHECKING(for diagnose out of sync MP-TSCs)
+AC_ARG_ENABLE(diag-tsc-sync,
+	      [ --enable-diag-tsc-sync		Enable diagnose out of sync MP-TSCs],
+	[case "$enableval" in
+	y | yes) CONFIG_RTAI_DIAG_TSC_SYNC=y ;;
+	*) unset CONFIG_RTAI_DIAG_TSC_SYNC ;;
+	esac])
+AC_MSG_RESULT(${CONFIG_RTAI_DIAG_TSC_SYNC:-no})
+
+dnl FIXME: is 0-7 correct?
+dnl what about larger CPU numbers (if at all possible)?
+dnl should we test for valid CPU number?
+AC_MSG_CHECKING(for master CPU for aligning MP-TSCs)
+AC_ARG_ENABLE(master-tsc-cpu,
+	[ --enable-master-tsc-cpu	Enable master TSC CPU],
+	[case "$enableval" in
+ changequote(,)dnl
+        [0-7])
+ changequote([,])dnl
+		if test x$CONFIG_RTAI_CPUS = x ; then
+			AC_MSG_ERROR([Option --enable-cpus must be defined before --enable-master-tsc-cpu])
+		fi
+		if test $enableval -lt 0 -o $enableval -ge $CONFIG_RTAI_CPUS ; then
+			AC_MSG_ERROR([Invalid value to option: --enable-master-tsc-cpu=<master-CPU-number> (must be between 0 and CONFIG_RTAI_CPUS)])
+		fi
+		CONFIG_RTAI_MASTER_TSC_CPU=$enableval ;;
+	*) AC_MSG_ERROR([Bad argument to option: --enable-master-tsc-cpu=<master-CPU-number>]) ;;
+	esac])
+AC_MSG_RESULT(${CONFIG_RTAI_MASTER_TSC_CPU:0})
+
+AC_MSG_CHECKING(for tune out of sync MP-TSCs)
+AC_ARG_ENABLE(tune-tsc-sync,
+	      [ --enable-tune-tsc-sync		Enable tune out of sync MP-TSCs],
+	[case "$enableval" in
+	y | yes) CONFIG_RTAI_TUNE_TSC_SYNC=y ;;
+	*) unset CONFIG_RTAI_TUNE_TSC_SYNC ;;
+	esac])
+AC_MSG_RESULT(${CONFIG_RTAI_TUNE_TSC_SYNC:-no})
 
 dnl
 dnl Check for additional build options.
@@ -1220,6 +1263,9 @@ test \! x$CONFIG_KBUILD = x && AC_DEFINE(CONFIG_KBUILD,1,[Kconfig])
 test \! x$CONFIG_RTAI_ADEOS = x && AC_DEFINE(CONFIG_RTAI_ADEOS,1,[Kconfig])
 test \! x$CONFIG_RTAI_HAL_PREEMPT = x && AC_DEFINE(CONFIG_RTAI_HAL_PREEMPT,1,[Kconfig])
 test \! x$CONFIG_RTAI_CPUS = x && AC_DEFINE_UNQUOTED(CONFIG_RTAI_CPUS,$CONFIG_RTAI_CPUS,[Kconfig])
+test x$CONFIG_RTAI_DIAG_TSC_SYNC = xy && AC_DEFINE(CONFIG_RTAI_DIAG_TSC_SYNC,1,[Kconfig])
+test \! x$CONFIG_RTAI_MASTER_TSC_CPU = x && AC_DEFINE_UNQUOTED(CONFIG_RTAI_MASTER_TSC_CPU,$CONFIG_RTAI_MASTER_TSC_CPU,[Kconfig])
+test x$CONFIG_RTAI_TUNE_TSC_SYNC = xy && AC_DEFINE(CONFIG_RTAI_TUNE_TSC_SYNC,1,[Kconfig])
 test \! x$CONFIG_RTAI_FPU_SUPPORT = x && AC_DEFINE(CONFIG_RTAI_FPU_SUPPORT,1,[Kconfig])
 test \! x$CONFIG_RTAI_MATH_C99 = x && AC_DEFINE(CONFIG_RTAI_MATH_C99,1,[Kconfig])
 test \! x$CONFIG_RTAI_TRACE = x && AC_DEFINE(CONFIG_RTAI_TRACE,1,[Kconfig])
